added the new functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/logo1.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- ✅ SEO Meta Tags -->
+  <title>MPC Online | Best Property Solution in Bhubaneswar</title>
+  <meta
+    name="description"
+    content="MPC Online offers the best property solution in Bhubaneswar (BBSR), including rental agreements, documentation, and real estate services."
+  />
+  <meta
+    name="keywords"
+    content="property solution in BBSR, real estate Bhubaneswar, rental agreement BBSR, property services Odisha"
+  />
+  <meta name="author" content="MPC Online" />
+
+  <!-- ✅ Open Graph for social sharing -->
+  <meta
+    property="og:title"
+    content="Best Property Solution in BBSR | MPC Online"
+  />
+  <meta
+    property="og:description"
+    content="Rental, agreement, documentation and expert property services in Bhubaneswar with MPC Online."
+  />
+  <meta property="og:image" content="https://www.mpconline.in/preview.jpg" />
+  <meta property="og:url" content="https://www.mpconline.in" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta
+    name="twitter:title"
+    content="Best Property Solution in BBSR | MPC Online"
+  />
+  <meta
+    name="twitter:description"
+    content="Get rental & lease documentation, property verification and real estate support in BBSR."
+  />
+  <meta name="twitter:image" content="https://www.mpconline.in/preview.jpg" />
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
