few alignment issues

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     content="MPC Online offers the best property solution in Bhubaneswar (BBSR), including rental agreements, documentation, and real estate services."
   />
   <meta
+    name="google-site-verification"
+    content="6A_4qLn7Kg_hLmvLtZrT8CmWJvZRt6W6s_lg5Vy4910"
+  />
+  <meta
     name="keywords"
     content="property solution in BBSR, real estate Bhubaneswar, rental agreement BBSR, property services Odisha"
   />
