final deployment update

--- a/index.html
+++ b/index.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/logo1.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/logo1.png" />
 
-  <!-- ✅ SEO Meta Tags -->
-  <title>MPC Online | Best Property Solution in Bhubaneswar</title>
-  <meta
-    name="description"
-    content="MPC Online offers the best property solution in Bhubaneswar (BBSR), including rental agreements, documentation, and real estate services."
-  />
-  <meta
-    name="google-site-verification"
-    content="6A_4qLn7Kg_hLmvLtZrT8CmWJvZRt6W6s_lg5Vy4910"
-  />
-  <meta
-    name="keywords"
-    content="property solution in BBSR, real estate Bhubaneswar, rental agreement BBSR, property services Odisha"
-  />
-  <meta name="author" content="MPC Online" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Open Graph for social sharing -->
-  <meta
-    property="og:title"
-    content="Best Property Solution in BBSR | MPC Online"
-  />
-  <meta
-    property="og:description"
-    content="Rental, agreement, documentation and expert property services in Bhubaneswar with MPC Online."
-  />
-  <meta property="og:image" content="https://www.mpconline.in/preview.jpg" />
-  <meta property="og:url" content="https://www.mpconline.in" />
-  <meta property="og:type" content="website" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="fZ2lRwmGU4GSLYo-T8FvrZoflSRVtfGDMUV-r8F0wNo"
+    />
+    <!-- SEO Meta Tags -->
+    <title>MPC Online | Best Property Solution in Bhubaneswar</title>
+    <meta
+      name="description"
+      content="MPC Online offers the best property and trusted solution in Bhubaneswar (BBSR), including rental agreements, documentation, and real estate services. Buy, Sell & Rent with Ease "
+    />
+    <meta
+      name="keywords"
+      content="property solution in BBSR, real estate Bhubaneswar, rental agreement BBSR, property services Odisha"
+    />
+    <meta name="author" content="MPC Online" />
 
-  <!-- ✅ Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta
-    name="twitter:title"
-    content="Best Property Solution in BBSR | MPC Online"
-  />
-  <meta
-    name="twitter:description"
-    content="Get rental & lease documentation, property verification and real estate support in BBSR."
-  />
-  <meta name="twitter:image" content="https://www.mpconline.in/preview.jpg" />
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Best Property Solution in BBSR | MPC Online"
+    />
+    <meta
+      property="og:description"
+      content="Rental, agreement, documentation and expert property services in Bhubaneswar with MPC Online."
+    />
+    <meta property="og:image" content="https://www.mpconline.in/preview.jpg" />
+    <meta property="og:url" content="https://www.mpconline.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Best Property Solution in BBSR | MPC Online"
+    />
+    <meta
+      name="twitter:description"
+      content="Get rental & lease documentation, property verification and real estate support in BBSR."
+    />
+    <meta name="twitter:image" content="https://www.mpconline.in/preview.jpg" />
+  </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Matrushakti Property Consultancy",
+        "alternateName": "MPC Online",
+        "url": "https://www.mpcpropertysolutions.in"
+      }
+    </script>
   </body>
 </html>
